recursion.lessons.recursion.koch.Koch.scala.error
Koch:25: error: not found: value snowSlide
	snowSlide(levels-1,length/3)
        ^